# rise-up

./: .envrc  .gitattributes  .gitignore  README.md  main.py  nim.py  pyproject.toml  r2.py  video.py
.agents/: AGENTS.md
.claude/skills/: README.md
.streamlit/: config.toml
reports/: incidents.db
skills/: README.md
skills/frontend-design/: SKILL.md
skills/git/scripts/: custom.py  git-sync
skills/project-governance/: SKILL.md
skills/project-governance/scripts/: setup.sh
skills/writing-plan/: SKILL.md
src/backend/: main.py  models.py
src/backend/database/: r2.py
src/frontend/: app.py  database.py
tests/: test_git_script.py
