[project]
name = "rise-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "boto3==1.43.44",
    "fastapi==0.115.8",
    "httpx==0.28.1",
    "openai==2.45.0",
    "pydantic-settings==2.14.2",
    "pydantic==2.10.6",
    "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.4.0",
    "ruff==0.9.9",
]

# for pyrefly to read root folder
[tool.pyright]
extraPaths = ["."]
