[project]
name = "rise-up"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "boto3==1.43.44",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "openai==2.45.0",
    "pydantic-settings==2.14.2",
    "pydantic==2.10.6",
    "python-dotenv==1.2.2",
    "starlette==0.46.2",
    "streamlit==1.59.1",
    "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.4.0",
    "ruff==0.9.9",
]

# for pyrefly to read root folder and src/ packages
[tool.pyright]
extraPaths = [".", "src"]
